  with previous databases. The upgrade scripts should work, but
  they are not yet tested.
- SQLite3 support, but it seems to run at 1/2 to 1/4 the speed of
  SQLite2.
- First cut at ANSI labels.
- New communications protocol between DIR and SD to reserve 
  drives. The DIR and SD are no longer compatible with 1.36 or
  lower versions.
- Preliminary Python Event support has been added. See below for
  configuration and details.
- DVD writing support, using parts, and a lot of new directives in
  the Device resource of the Storage configuration file.
- Seven new options keywords in a FileSet resource:
  ignorecase, fstype, hfsplussupport, wilddir, wildfile, regexdir,
  and regexfile. See below for details.

New Directives:
- New Run directive in Job resource of DIR. It permits
  cloning of jobs.  To clone a copy of the current job, use
     Run = "job-name level=%l since=\"%s\""
  Note, job-name is normally the same name as the job that
  is running but there is no restriction on what you put. If you
  want to start the job by hand and use job overrides such as       
  storage=xxx, realize that the job will be started with the
  default storage values not the overrides.  The level=%l guarantees
  that the chosen level of the job is the same, and the since=... 
  ensures that the job uses *exactly* the same time/date for incremental
  and differential jobs. The since=... is ignored when level=Full.
  A cloned job will not start additional clones, so it is not possible
  to recurse.
- New Options keywords in a FileSet directive:
  - WildDir xxx
    Will do a wild card match against directories (files will not
    be matched).
  - WildFile xxx
    Will do a wild card match against files (directories will not
    be matched).
  - RegexDir xxx
    Will do a regular expression match against directories (files
    will not be matched).
  - RegexFile xxx
    Will do a regular expression match against files( directories
    will not be matched).
  - IgnoreCase = yes | no